<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="55dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your Name!"
        android:textAlignment="center" />

    <Button
        android:id="@+id/homeNewBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/homeNewBtn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/setObjectEt"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="total object" />
        <Button
            android:id="@+id/setObjectBtn"
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/objectStatus"
            android:id="@+id/setObjectStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/setTimeEt"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="game time" />
        <Button
            android:id="@+id/setTimeBtn"
            android:text="@string/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/timeStatus"
            android:id="@+id/setTimeStatusTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>